--- a/tmux.conf
+++ b/tmux.conf
@@ -60,7 +60,7 @@ set -g @plugin 'tmux-plugins/tmux-battery'
 
 set -g @sessionx-bind 'o'
 set -g @resurrect-capture-pane-contents "on"
-set -g @continuum-restore "on"
+set -g @continuum-restore "off"
 
 # Configure Catppuccin
 set -g @catppuccin_flavor "mocha"
